[package]
name = "Stratus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http2"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
listenfd = "1.0.2"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-zstd",
    "cors",
    "decompression-gzip",
    "decompression-zstd",
] }
tracing = { version = "0.1.41", features = ["release_max_level_debug", "log"] }
tracing-subscriber = { version = "0.3.20", features = [
    "chrono",
    "serde",
    "json",
    "env-filter",
] }

[dev-dependencies]
flate2 = "1.1.4"
http = "1.3.1"
zstd = "0.13.3"
